# aurora-jax

./: .gitattributes  .gitignore  .zenodo.json  AURORA_MULTI_GPU_GUIDE.md  AuroraTesting.py  AuroraTestingHRES.py  CITATION.cff  DownloadERA5.py  JaxIndividualComponentsBenchmarking.ipynb  LORA_train.py  Makefile  README.md  README.preview.md  WeightConversion.py  all_metrics.csv  auroraTestERA5.py  auroraTestHRES.py  auroraTestiHRES.py  aurora_test_ERA5.py  aurora_test_HRES.py  checkpointBackbone  checkpointDecoder  checkpointEncoder  config.py  dataset  downloadHRES.py  download_ERA5.py  download_HRES.py  hresDataset  longRolloutTrain.py  long_rollout_train.py  package_mlflow.py  preview-structure.sh  preview_readme.py  pyproject.toml  replay_buffer.py  requirements.txt  save_batches.py  score.py  temp  (+5 more)
.ipynb_checkpoints/: JaxIndividualComponentsBenchmarking-checkpoint.ipynb  PytorchIndividualComponentsBenchmarking-checkpoint.ipynb
article/: index.html
aurora/: IterableDataset.py  __init__.py  area.py  batch.py  encoderMapping  iterable_dataset.py  normalisation.py  rollout.py  rolloutTrain.py  rollout_train.py  score.py  temp.py
aurora-article-site/: README.md  aurora-alembic-static.html  aurora-in-jax.html  index.md
aurora/model/: aurora.py  (+11 more)
checkpointsTillBackbone/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
checkpointsTillEncoder/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
output_images_and_results/: aurora_rmse_mae - RMSE_MAE_errors_aurora.csv
tests/: conftest.py  test_batch.py  test_headers.py
wandb/: latest-run
(+13 files in other folders)
