[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "microsoft-aurora"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "torchvision",
    "einops",
    "timm==0.6.13",
    "huggingface-hub",
    "pydantic",
    "xarray",
    "netcdf4",
    "azure-storage-blob",
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "chex",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "tqdm",
    "wandb",
    "fastapi",
    "uvicorn",
    "cdsapi",
    "zarr",
    "nvitop",
    "dask",
    "distributed",
    "fsspec",
    "pillow",
    "pyarrow",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "wheel",
    "build",
    "ghp-import",
    "requests_mock",
    "jupyter-book",
    "mlflow",
]

[tool.hatch.build]
include = ["aurora*", "LICENSE"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "aurora/_version.py"

[tool.coverage.run]
branch = true
source = ["aurora"]
